--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@
   width: 100%;
   max-width: var(--max-width);
   margin: 0 auto;
-  padding: 8rem 4rem 0 4rem;
+  padding: 4rem 4rem 0 4rem;
 }
 
 #hero {
@@ -177,14 +177,21 @@
 
 #hero .right {
   grid-column: span 7;
-  transform: translateY(-2rem);
+    grid-column: span 7;
+    height: auto;
+    transform: translateY(0);
+    min-height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: flex-end;
 }
 
 #Hello {
   font-family: Lato, Poppins, Helvetica, sans-serif;
   font-weight: 500;
   color: var(--textColor);
-  font-size: 4.5rem;
+  font-size: 6rem;
   letter-spacing: -2px;
 }
 
@@ -223,8 +230,8 @@ button:active {
 
 #hero-img {
   background-image: url('../images/ABC_Hero_mockup.png');
-  width: 140%;
-  height: 130%;
+  width: 100%;
+  height: 100%;
   background-size: contain;
   background-repeat: no-repeat;
   }
