--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ main {
 }
 
 #card:hover {
-  box-shadow: 0px 4px 16px #ff8497;
+  box-shadow: 0px 4px 16px #717070;
   transform: scale(1.02);
   transition: 300ms;
 }
@@ -287,10 +287,12 @@ main {
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
 }
-.card-hero {
-  height: 80%;
-  background-color: whitesmoke;
-  border-radius: 1rem 1rem 0 0;
+.card-hero-1 {
+  background-image: url('../images/Wai_Portfolio\ 2023_ABC.jpg');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .secondary-button {
@@ -508,8 +510,9 @@ footer #contact {
     font-size: 3.5rem;
     letter-spacing: -2px;
   }
-  .card {
-    grid-column: span 12;}
+  #card {
+    grid-column: span 12;
+    height: auto;}
 
   #about-me-section .skills {
     padding-top: 1rem;}
@@ -579,6 +582,10 @@ nav #burger {
   
 .section-header {
   padding: 24px;}
+
+#card {
+    grid-column: span 12;
+    height: auto;}
 
 #about-me-section {
   padding: 36px 24px;}  
