--- a/css/style.css
+++ b/css/style.css
@@ -269,12 +269,12 @@ main {
   grid-column: span 6;
   min-height: 600px;
   min-width: 400px;
-  box-shadow: 0px 0px 6px #C4C4C4;
-  border-radius: 1.5rem;
+  box-shadow: 0px 0px 4px #C4C4C4;
+  border-radius: 0.5rem;
   display:flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 24px;
+  padding: 22px;
 }
 
 #card:hover {
@@ -284,7 +284,7 @@ main {
 }
 
 .card-content {
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.1rem;
   padding-top: 0.5rem;
 }
 .card-hero-1 {
@@ -295,6 +295,45 @@ main {
   background-repeat: no-repeat;
 }
 
+.card-hero-2 {
+  background-image: url('../images/Wai_Portfolio 2023_tripal.jpg');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card-hero-3 {
+  background-image: url('../images/Wai_Portfolio 2023_studybuddy.jpg');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card-hero-4 {
+  background-image: url('../images/Wai_Portfolio 2023_godsgrip.jpg');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card-hero-5 {
+  background-image: url('../images/Wai_Portfolio 2023_social.jpg');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card-hero-6 {
+  background-image: url('../images/Wai_Portfolio 2023_social.jpg');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 .secondary-button {
   background-color: white;
   color: var(--primaryColor);
