--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    border: 3px solid green;
   }
 
   p {
@@ -20,10 +21,10 @@
   }
 
   h2 {
-    font-family: var(--primaryFont);
-    font-weight: 500;
+    font-family: var(--secondaryFont);
+    font-weight: 300;
     color: var(--textColor);
-    font-size: 2.2rem;
+    font-size: 3rem;
   }
 
   h2 a {
@@ -54,7 +55,7 @@
 
   h4 {
     font-family: var(--secondaryFont);
-    font-weight: 600;
+    font-weight: 400;
     line-height: 1.4rem;
     color: var(--textColor);
     font-size: 18px;
@@ -103,7 +104,7 @@
       justify-content: space-between;
       align-items: center;
       background-color: var(--background);
-      z-index: 100;
+      z-index: 1000;
     }
     
    #wailogo {
@@ -238,18 +239,10 @@ button:active {
   width: 100%;
   max-width: var(--max-width);
   margin: 0 auto;
-  padding: var(--main-margin);
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  padding-top: 4rem;
+  text-align: center;
 }
 
-.section-label {
-  padding-left: 1rem;
-  border-left-style: solid;
-  border-width: 0.3rem;
-  border-color: var(--primaryColor);
-  transform: translateX(-1.3rem);
-}
 
 main {
   width: 100%;
@@ -421,8 +414,10 @@ footer {
   max-width: var(--max-width);
   margin: 0 auto;
   padding: var(--main-margin);
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
   background-color: var(--textColor);
   min-height: 200px;
 }
