--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-/* border: 3px solid green; */
+    /* HIDDEN
+border: 3px solid green;  */
   }
 
   p {
@@ -65,8 +66,8 @@
   h5 {
     font-family: var(--secondaryFont);
     font-weight: 400;
-    font-size: 1.5rem;
-    line-height: 3rem;
+    font-size: 1.3rem;
+    line-height: 2.5rem;
     color: var(--textColor);
   }
 
@@ -81,10 +82,9 @@
 
   h7 {
     font-family: Lato, Poppins, Helvetica, sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     color: var(--textColor);
-    font-size: 4.5rem;
-    letter-spacing: -2px;
+    font-size: 4rem;
   }
 
   li {
@@ -145,6 +145,10 @@
       display: flex;
       align-items: center;
     }
+
+.emptydiv {
+  min-width: 50px;
+}    
 
   .navLinks {
     display: flex;
@@ -255,6 +259,7 @@ button:active {
   background-color: var(--primaryColor-light);
   transition: var(--motion-1);
 }
+
 /* 
 #hero-img {
   background-image: url('../images/casestudy_trip_-1_sml.png');
@@ -313,6 +318,7 @@ main {
   height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .card-hero-2 {
@@ -494,7 +500,7 @@ footer {
   background-color: var(--textColor);
 }
 
-/* MODAL */
+/*  MODAL ---------------------------------- MODAL ---------------------------------- */
 #modal-menu {
   opacity: 1;
   position: fixed;
@@ -549,7 +555,7 @@ footer {
 
 /* media queries --------------------------*/
 
-@media screen and (max-width: 1100px) {
+@media screen and (min-width: 1200px) {
 
   #introCopy {
     font-family: var(--primaryFont);
@@ -560,7 +566,9 @@ footer {
   }}
 
 
-@media screen and (max-width: 600px) {
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media only screen and (max-width: 768px) {
 
   #hero {
     height: auto;}
@@ -577,22 +585,10 @@ footer {
     min-height: 40vh;
   }
 
-  #hero-img {
-    width: 100%;
-    height: 100%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;}
-
   #about-me {
     font-size: 3.5rem;
     letter-spacing: -2px;
   }
-
-  
-  #card {
-    grid-column: span 12;
-    height: auto;}
 
   #about-me-section .skills {
     padding-top: 1rem;}
@@ -621,14 +617,14 @@ footer {
     gap: 4rem;}
 }
 
-/* media queries 300 mobile--------------------------*/
 
 
-@media screen and (max-width: 300px) {
+/* Extra small devices (phones, 600px and down) */
+
+@media only screen and (max-width: 600px) {
 
 nav {
-  padding: 1rem 24px;
-}  
+  padding: 1rem 24px;}  
 
 .navLinks a {
   display: none;} 
@@ -646,7 +642,7 @@ nav #burger {
   }
 
 #hero {
-  height: fit-content;
+  height: auto;
   padding: 24px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -663,6 +659,9 @@ nav #burger {
 .section-header {
   padding: 24px;}
 
+  #card {
+    grid-column: span 12;
+    height: auto;}
 
 #about-me-section {
   padding: 36px 24px;}  
@@ -672,6 +671,26 @@ nav #burger {
 
 footer {  
   padding: 36px 24px;}
+ 
+  #left-contact {
+    grid-column: span 12;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  #right-contact {
+    grid-column: span 12;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+#right-contact {
+    grid-column: span 12;
+      justify-content: center;
+      padding-bottom: 1rem;
+    }
 
 main {
   padding: 24px;}
